<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.HomeActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyMaterialTheme.AppBarOverlay">

        <include layout="@layout/toolbar"/>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
   <!-- <fragment
        android:id="@+id/home_slide_show_frame"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:name="com.khosroabadi.myplantaqua.fragments.HomeSlideShowFragment">

    </fragment>-->

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/home_slide_show_frame"
        android:layout_width="match_parent"
        android:layout_height="200dp"></FrameLayout>

            <!--<include layout="@layout/product_activity_error_layout"/>-->

    <LinearLayout
        android:id="@+id/connection_faild_holder"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textFail"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="12dp"
            android:text="@string/fail_network_connection" />
        <TextView
            android:layout_marginTop="16dp"
            android:layout_below="@+id/textFail"
            android:id="@+id/open_network_setting"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="11dp"
            android:text="@string/open_network_setting" />


        <Button
            android:id="@+id/network_fail_btn"
            android:layout_marginTop="12dp"
            android:background="#55111111"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/open_network_setting"
            android:textColor="@color/md_white_1000"
            android:text="@string/tryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/best_plant_holder"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_gravity="right"
                android:textColor="@color/md_black_1000"
                android:layout_marginRight="16dp"
                android:text="@string/best_plants"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:gravity="left"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/more_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="16dp"
                android:background="@drawable/ic_action_more_horiz"/>
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/best_plant_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>


    <LinearLayout
        android:id="@+id/best_fish_holder"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_gravity="right"
                android:textColor="@color/md_black_1000"
                android:layout_marginRight="16dp"
                android:text="@string/best_fishes"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:gravity="left"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/more_fish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="16dp"
                android:background="@drawable/ic_action_more_horiz"/>
        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/best_fish_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>

    <LinearLayout
        android:id="@+id/best_shrimp_holder"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_gravity="right"
                android:textColor="@color/md_black_1000"
                android:layout_marginRight="16dp"
                android:text="@string/best_shrimp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:gravity="left"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/more_shrimp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_gravity="left"
                android:layout_marginLeft="16dp"
                android:background="@drawable/ic_action_more_horiz"/>
        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/best_shrimp_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>
  <!-- <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"

        app:srcCompat="@android:drawable/ic_dialog_email" />-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
